<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f2f2f2"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.teamhikingkenya.customfonts.MyTextView_Poppins_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:text="@string/log_in"
                android:textColor="#333232"
                android:textSize="30sp" />
            

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="14.5dp"
            tools:ignore="RtlSymmetry">

            <View
                android:layout_width="5.6dp"
                android:layout_height="200dp"
                android:background="#237A57" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="35.6dp"
                android:background="@drawable/rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="19dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22.3dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textSize="12.8sp"
                            android:inputType="textEmailAddress">
                            <requestFocus/>
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:textSize="12.8sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.teamhikingkenya.customfonts.MyTextView_Poppins_Medium
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/forgot_password"
                            android:textColor="#237A57"
                            android:textSize="13.3sp" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLogIn"
            android:layout_width="90dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16.7dp"
            android:background="@drawable/full_blue_roundshape"
            android:gravity="center"
            android:orientation="vertical">

            <com.teamhikingkenya.customfonts.MyTextView_Poppins_SemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.teamhikingkenya.customfonts.MyTextView_Poppins_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/new_user"
                android:textColor="#333232"
                android:textSize="13.3sp" />

            <com.teamhikingkenya.customfonts.MyTextView_Poppins_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="#237A57"
                android:textSize="13.3sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>